Revert "Fixed search bar gaps"
This reverts commit aaefa93c04368e23bbf9ca4d391d0c61b0a6c9f3.

--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -5,14 +5,12 @@
   display: flex;
   position: sticky;
   top: 0;
-  transform: translateY(-4px); // Prevent gaps when scrolling
   height: max-content;
   gap: $space-smd;
 
-  @media (max-width: $tablet) {
-    // Fixes the gaps shown when scrolling
-    border-left: 5px solid $color-darker-blue;
-  }
+  // Fixes the gaps shown when scrolling
+  transform: translateY(-5px) translateX(-5px);
+  width: 110%;
 
   // Make sure search bar is always above content
   background-color: $color-darker-blue;
@@ -20,8 +18,8 @@
   padding-bottom: $space-smd;
 
   &__button {
-    background-color: inherit;
     border: none;
+    background-color: inherit;
     cursor: pointer;
   }
 
